# AWSIoT.Luna

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
dependency/AWSIoTEmbeddedSDK/: CMakeLists.txt
dependency/AWSIoTEmbeddedSDK/include/: aws_iot_config_default.h  aws_iot_mqtt_client.h  aws_iot_mqtt_client_interface.h  aws_iot_shadow_records.h  threads_interface.h
dependency/AWSIoTEmbeddedSDK/msvs/2015/: AWSIoTEmbeddedSDK.vcxproj  AWSIoTEmbeddedSDK.vcxproj.filters  ReadMe.txt
dependency/AWSIoTEmbeddedSDK/platform/common_timer/: timer.cpp
dependency/AWSIoTEmbeddedSDK/platform/win32/common/: timer.cpp  timer_platform.h
dependency/AWSIoTEmbeddedSDK/src/: aws_iot_mqtt_client_common_internal.c  aws_iot_shadow.c  aws_iot_shadow_actions.c  aws_iot_shadow_json.c  aws_iot_shadow_records.c
dependency/mbedTLS/: CMakeLists.txt
dependency/mbedTLS/visualc/VS2015/: aescrypt2.vcxproj  benchmark.vcxproj  cert_app.vcxproj  cert_req.vcxproj  cert_write.vcxproj  crl_app.vcxproj  crypt_and_hash.vcxproj  dh_client.vcxproj  dh_genprime.vcxproj  dh_server.vcxproj  dtls_client.vcxproj  dtls_server.vcxproj  ecdsa.vcxproj  gen_entropy.vcxproj  gen_key.vcxproj  gen_random_ctr_drbg.vcxproj  gen_random_havege.vcxproj  generic_sum.vcxproj  hello.vcxproj  key_app.vcxproj  key_app_writer.vcxproj  mbedTLS.vcxproj  mini_client.vcxproj  mpi_demo.vcxproj  pem2der.vcxproj  pk_decrypt.vcxproj  pk_encrypt.vcxproj  pk_sign.vcxproj  pk_verify.vcxproj  req_app.vcxproj  rsa_decrypt.vcxproj  rsa_encrypt.vcxproj  rsa_genkey.vcxproj  rsa_sign.vcxproj  rsa_sign_pss.vcxproj  rsa_verify.vcxproj  rsa_verify_pss.vcxproj  selftest.vcxproj  ssl_cert_test.vcxproj  ssl_client1.vcxproj  (+7 more)
msvc/2015/: AWSIoT.Luna.sln
src/Arduino/multi_sensors_device_01/: multi_sensors_device_01.ino
src/MultiSensorsDeviceSample/: CMakeLists.txt
src/MultiSensorsDeviceSample/msvc/: MultiSensorsDeviceSample.vcxproj  MultiSensorsDeviceSample.vcxproj.filters
src/MultiSensorsDeviceSample/src/: AWSIoTAgent.cpp  AWSIoTAgent.h  AWSIoTConnectionInfo.cpp  AWSIoTConnectionInfo.h  ArduinoAgent.cpp  ArduinoAgent.h  main.cpp
